# nsedit

./: .gitignore  CMakeLists.txt  cmake-variants.yaml  cppcheck-report.txt  mem.sh  test.txt
include/: Board.hpp  Entity.hpp  Logger.hpp
src/: Board.cpp  Entity.cpp  main.cpp
